--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -25,9 +25,14 @@ clean-targets:
 require-dbt-version: [">=1.0.0", "<2.0.0"]
 
 models:
-  base:
-    materialized: view
-  core:
-    materialized: table
-  mart:
-    materialized: table
+  dbtDatabricksWorkflowCookbook:
+    base:
+      +materialized: view
+    core:
+      +materialized: table
+      +tblproperties: {'delta.feature.allowColumnDefaults': 'supported', 'delta.columnMapping.mode' : 'name', 'delta.enableDeletionVectors': 'true'}
+    mart:
+      +materialized: table
+
+# Optional for logging dbt run info to Delta tables
+# on-run-end: "{{ dbt_artifacts.upload_results(results) }}"
